--- a/app/views/public/users/review.html.erb
+++ b/app/views/public/users/review.html.erb
@@ -14,7 +14,11 @@
         <div class="card-deck col-4 mx-auto mb-3">
           <%= link_to souvenir_review_path(review.souvenir_id, review) do %>
           <div class="card h-100 border-secondary btn btn-outline-primary", style="width:15rem;">
-            <%= image_tag review.souvenir.get_image, class: "card-img-top width='30%' height='50'" %>
+            <% if review.souvenir.rakuten_image_url.present? %>
+              <img src="<%= review.souvenir.rakuten_image_url %>">
+            <% else %>
+              <%= image_tag review.souvenir.get_image, class: "card-img-top width='30%' height='50'" %>
+            <% end %>
             <div class="card-body">
               <h4 class="card-title"><%= review.souvenir.souvenir_name %></h4>
               <p class="card-text"><%= review.review %></p>
