--- a/app/views/public/users/want.html.erb
+++ b/app/views/public/users/want.html.erb
@@ -14,7 +14,11 @@
         <div class="card-deck col-4 mx-auto mb-3">
           <%= link_to souvenir_path(want.souvenir_id) do %>
           <div class="card h-100 border-secondary btn btn-outline-warning", style="width:15rem;">
-            <%= image_tag want.souvenir.get_image, class: "card-img-top width='30%' height='50'" %>
+            <% if want.souvenir.rakuten_image_url.present? %>
+              <img src="<%= want.souvenir.rakuten_image_url %>">
+            <% else %>
+              <%= image_tag want.souvenir.get_image, class: "card-img-top width='30%' height='50'" %>
+            <% end %>
             <div class="card-body">
               <h4 class="card-title"><%= want.souvenir.souvenir_name %></h4>
               <p class="card-text"><%= want.souvenir.introduction %></p>
