[Fix]楽天API実装、追加2

--- a/app/views/public/souvenirs/new.html.erb
+++ b/app/views/public/souvenirs/new.html.erb
@@ -45,7 +45,8 @@
                 <td><%= f.radio_button :category, Souvenir.categories.key(0) %>
                     <%= f.label :category_food, "食品" %></br>
                     <%= f.radio_button :category, Souvenir.categories.key(1) %>
-                    <%= f.label :category_goods, "グッズ" %></td>
+                    <%= f.label :category_goods, "グッズ" %>
+                </td>
               </tr>
             </tbody>
           </table>
