--- a/app/views/admin/souvenirs/new.html.erb
+++ b/app/views/admin/souvenirs/new.html.erb
@@ -10,13 +10,26 @@
       <div class="col-12 m-3">
           <table class="table table-border">
             <tbody>
+
+              <tr>
+                <td></td>
+                <td>ミヤゲの写真がない場合は、下記より楽天で検索してください。</td>
+              </tr>
+              <tr>
+                <td class="col-3 align-middle text-center">楽天で画像検索</td>
+                <td class="text-center"><%= link_to "楽天で画像検索", rakuten_index_path, class: "btn btn-info btn-block" %></td>
+              </tr>
+
+
               <tr>
                 <td class="col-3 text-center">ミヤゲ名</td>
                 <td><%= f.text_field :souvenir_name, autofocus: true, class: "form-control" %></td>
               </tr>
               <tr>
-                <td class="col-3 text-center">写真</td>
-                <td><%= f.file_field :image, class: "form-control-image", accept: 'image/*' %></td>
+                <td class="col-3 align-middle text-center">写真</td>
+                <td><%= f.file_field :image, class: "form-control-image", accept: 'image/*' %>
+                    <%= f.label :image, "※ 楽天で画像を取得した際には画像を選択する必要はありません。", class: "mt-3 font-weight-bold" %>
+                </td>
               </tr>
               <tr>
                 <td class="col-3 text-center">県名</td>
@@ -28,14 +41,17 @@
               </tr>
               <tr>
                 <td class="col-3 text-center">カテゴリー</td>
-                <td><%= f.radio_button :category, "food" %>
+                <td><%= f.radio_button :category, Souvenir.categories.key(0) %>
                     <%= f.label :category_food, "食品" %></br>
-                    <%= f.radio_button :category, "goods" %>
-                    <%= f.label :category_godds, "グッズ" %></td>
+                    <%= f.radio_button :category, Souvenir.categories.key(1) %>
+                    <%= f.label :category_goods, "グッズ" %>
+                </td>
               </tr>
             </tbody>
           </table>
         </div>
+        <%= f.hidden_field :rakuten_image_url, value: @rakuten_image_url %>
+        <%= f.hidden_field :rakuten_url, value: @rakuten_url %>
         <div class="d-flex justify-content-around ml-5">
         <%= f.submit "登録", class: "btn btn-success px-5" %>
         </div>
