--- a/app/views/admin/souvenirs/show.html.erb
+++ b/app/views/admin/souvenirs/show.html.erb
@@ -4,7 +4,15 @@
       <h2 class="text-center m-3"><%= @souvenir.souvenir_name %>の詳細</h2>
       <div class="row mt-3">
         <div class="col-4">
-          <%= image_tag @souvenir.get_image.variant( resize: "250x250")  %>
+           <% if @souvenir.rakuten_image_url.present? %>
+            <img src="<%= @souvenir.rakuten_image_url %>">
+          <% else %>
+            <%= image_tag @souvenir.get_image.variant( resize: "250x250")  %>
+          <% end %>
+          <br>
+          <% if @souvenir.rakuten_url.present? %>
+            <a href="<%= @souvenir.rakuten_url %>">楽天の商品ページへ</a>
+          <% end %>
         </div>
         <div class="col-8">
           <div class="d-flex justify-content-around m-3 ">
