--- a/app/views/admin/souvenirs/edit.html.erb
+++ b/app/views/admin/souvenirs/edit.html.erb
@@ -15,8 +15,18 @@
                 <td><%= f.text_field :souvenir_name, autofocus: true, class: "form-control" %></td>
               </tr>
               <tr>
-                <td class="col-3 text-center">写真</td>
-                <td><%= f.file_field :image, class: "form-control-image", accept: 'image/*' %></td>
+                <td class="col-3 align-middle text-center">写真</td>
+                <td><%= f.file_field :image, class: "form-control-image", accept: 'image/*' %>
+                    <%= f.label :image, "※ 楽天で画像を取得した際には画像を選択する必要はありません。", class: "mt-3 font-weight-bold" %>
+                </td>
+              </tr>
+              <tr>
+                <td class="col-3 align-middle text-center">楽天で取得した画像</td>
+                <td><%= f.text_field :rakuten_image_url,  class: "form-control" %></td>
+              </tr>
+              <tr>
+                <td class="col-3 align-middle text-center">楽天ページへのURL</td>
+                <td><%= f.text_field :rakuten_url,  class: "form-control" %></td>
               </tr>
               <tr>
                 <td class="col-3 text-center">県名</td>
@@ -28,14 +38,16 @@
               </tr>
               <tr>
                 <td class="col-3 text-center">カテゴリー</td>
-                <td><%= f.radio_button :category, "food" %>
+                <td><%= f.radio_button :category, Souvenir.categories.key(0) %>
                     <%= f.label :category_food, "食品" %></br>
-                    <%= f.radio_button :category, "goods" %>
-                    <%= f.label :category_godds, "グッズ" %></td>
+                    <%= f.radio_button :category, Souvenir.categories.key(1) %>
+                    <%= f.label :category_goods, "グッズ" %>
+                </td>
               </tr>
             </tbody>
           </table>
         </div>
+
         <div class="d-flex justify-content-around ml-5">
         <%= f.submit "更新", class: "btn btn-success px-5" %>
         <%= link_to "削除する", admin_souvenir_path, method: :delete, "data-confirm" => "削除してもよろしいですか？", class: "btn btn-outline-danger" %>
