--- a/app/views/public/souvenirs/index.html.erb
+++ b/app/views/public/souvenirs/index.html.erb
@@ -6,7 +6,15 @@
 
     <div class="col-8 offset-1 pt-5">
     	<div class="mb-3">
-        <h2 class="text-center">ミヤゲ一覧</h2>
+        <% if params[:keyword] == 'average_star' %>
+          <h2 class="text-center">星評価高い順</h2>
+        <% elsif params[:keyword] == 'wants' %>
+          <h2 class="text-center">ほしい！多い順</h2>
+        <% elsif params[:keyword] == 'reviews' %>
+          <h2 class="text-center">レビュー多い順</h2>
+        <% else %>
+          <h2 class="text-center">ミヤゲ一覧</h2>
+        <% end %>
         <p class="text-right mr-5">全 <%= @souvenirs.count %> 件</p>
       </div>
 
@@ -14,7 +22,7 @@
         <%= link_to "戻る", root_path, class: "btn btn-outline-secondary" %>
       </div>
       <div class="m-3">
-        <%= form_with model: @souvenir, url: search_sort_path, method: :get, local: true do |f| %>
+        <%= form_with model: @souvenir, url: souvenirs_path, method: :get, local: true do |f| %>
           <%= f.select :keyword, [ ['ほしい！多い順', 'wants'],
                                    ['レビュー多い順', 'reviews'],
                                    ['星評価高い順', 'average_star']
@@ -24,28 +32,7 @@
       </div>
 
       <div class="row">
-        <% @souvenirs.each do |souvenir| %>
-		    <div class="card-deck col-4 mx-auto mb-3 text-center">
-        <%= link_to souvenir_path(souvenir) do %>
-			    <div class="card h-100 border-secondary btn btn-outline-secondary", style="width:15rem;">
-			      <% if souvenir.rakuten_image_url.present? %>
-              <img src="<%= souvenir.rakuten_image_url %>">
-            <% else %>
-              <%= image_tag souvenir.get_image, class: "card-img-top width='30%' height='50'" %>
-            <% end %>
-			      <div class="card-body">
-				      <h4 class="card-title"><%= souvenir.souvenir_name %></h4>
-				      <h6 class="card-subtitle m-2"><%= souvenir.prefecture.prefecture_name %></h6>
-				      <p class="card-subtitle m-2">ほしい！：<%= souvenir.wants.count %> 件<br>
-				                               		 レビュー：<%= souvenir.reviews.count %> 件</p>
-				      <p class="card-subtitle m-2"><%= render "average_star", souvenir: souvenir %></p>
-				      <p class="card-text mt-3"><%= souvenir.introduction.truncate(30) %></p>
-				      <!------------------------".truncate(10)" は、文字列を30文字だけ表示する------------------>
-            </div>
-			    </div>
-			  <% end %>
-		    </div>
-		    <% end %>
+        <%= render "index", souvenirs: @souvenirs %>
 	    </div>
 
 	    <div class="text-right">
@@ -53,6 +40,7 @@
 	      <i class="fa-solid fa-plus fa-2xl"></i>
       <% end %>
       </div>
+
     </div>
   </div>
 </div>
