--- a/app/views/public/souvenirs/search_sort.html.erb
+++ b/app/views/public/souvenirs/search_sort.html.erb
@@ -6,8 +6,14 @@
 
     <div class="col-8 offset-1 pt-5">
     	<div class="mb-3">
-        <h2 class="text-center">並び替え</h2>
-        <p class="text-right mr-5">全 <%= @souvenirs.count %> 件</p>
+    	  <% if params[:keyword] == 'average_star' %>
+    	    <h2 class="text-center">星評価高い順</h2>
+    	 <% elsif params[:keyword] == 'wants' %>
+    	   <h2 class="text-center">ほしい！多い順</h2>
+    	 <% else params[:keyword] == 'reviews' %>
+    	   <h2 class="text-center">レビュー多い順</h2>
+    	 <% end %>
+      <p class="text-right mr-5">全 <%= @souvenirs.count %> 件</p>
       </div>
 
       <div class ="m-2 text-right">
