--- a/app/views/public/homes/search_tag.html.erb
+++ b/app/views/public/homes/search_tag.html.erb
@@ -15,7 +15,7 @@
       </div>
 
       <div class="row">
-        <%= render "index", souvenirs: @souvenirs %>
+        <%= render "public/souvenirs/index", souvenirs: @souvenirs %>
 	    </div>
 
     </div>
