--- a/app/views/public/souvenirs/_index.html.erb
+++ b/app/views/public/souvenirs/_index.html.erb
@@ -12,7 +12,7 @@
           <h6 class="card-subtitle m-2"><%= souvenir.prefecture.prefecture_name %></h6>
           <p class="card-subtitle m-2">ほしい！：<%= souvenir.wants.count %> 件<br>
 		                                   レビュー：<%= souvenir.reviews.count %> 件</p>
-          <p class="card-subtitle m-2"><%= render "average_star", souvenir: souvenir %></p>
+          <p class="card-subtitle m-2"><%= render "public/souvenirs/average_star", souvenir: souvenir %></p>
           <p class="card-text mt-3"><%= souvenir.introduction.truncate(30) %></p>
           <!------------------------".truncate(10)" は、文字列を30文字だけ表示する------------------>
         </div>
