--- a/app/views/public/homes/search_column.html.erb
+++ b/app/views/public/homes/search_column.html.erb
@@ -23,7 +23,7 @@
       </div>
 
       <div class="row">
-        <%= render "index", souvenirs: @souvenirs %>
+        <%= render "public/souvenirs/index", souvenirs: @souvenirs %>
 	    </div>
     </div>
 
