--- a/app/views/rakuten/index.html.erb
+++ b/app/views/rakuten/index.html.erb
@@ -49,7 +49,7 @@
                 <% end %>
               </table>
             <% else %>
-              <p>商品が見つかりません。</p>
+              <h4 class="text-center">商品が見つかりません。</h4>
             <% end %>
           </div>
         </div>
@@ -96,13 +96,12 @@
                 <% end %>
               </table>
             <% else %>
-              <p>商品が見つかりません。</p>
+              <h4 class="text-center">商品が見つかりません。</h4>
             <% end %>
           </div>
         </div>
       <% else %>
         <h2 class="text-center mt-5">ログインしてください。</h2>
-
       <% end %>
     </div>
   </div>
