--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,30 +19,21 @@
   box-sizing: border-box;
 }
 
-/* スクロールボタン */
 .scroll-top-btn {
   display: none; /* ボタンを初めは非表示に */
   position: fixed; /* ボタンを画面に固定 */
-  right: 20px;
-  bottom: 20px;
-  width: 40px; /* ボタンの幅 */
-  height: 40px; /* ボタンの高さ */
-  background-color: #BDDF38; /* ボタンの背景色 */
-  border-radius: 50%; /* ボタンの角を丸くする */
-  display: flex; /* ボタン内の要素を横並びに配置 */
-  align-items: center; /* ボタン内の要素を縦方向中央に配置 */
-  justify-content: center; /* ボタン内の要素を横方向中央に配置 */
-  color: #fff; /* テキストの色を白に設定 */
-  font-size: 24px; /* テキストのフォントサイズ */
+  bottom: 10%; /* 画面の下から10%の位置に配置 */
+  right: 5%; /* 画面の右から5%の位置に配置 */
+  color: #b0e0e6; /* テキストの色を設定 */
+  font-size: 20px; /* テキストのフォントサイズ */
   text-decoration: none; /* テキストの下線を削除 */
-  transition: background-color 0.3s ease-in-out, transform 0.3s ease-in-out, opacity 0.3s ease-in-out; /* ホバー時のトランジション効果の設定 */
+  transition: background-color 0.3s ease-in-out, transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+                          /* ホバー時のトランジション効果の設定 */
   z-index: 9999; /* ボタンを最前面に */
 }
 
 .scroll-top-btn:hover {
-  background-color: #9ECA2D; /* ホバー時の背景色変更 */
   text-decoration: none; /* テキストの下線を削除 */
-  color: #fff; /* ホバー時のテキストの色変更 */
-  transform: scale(1.1); /* ホバー時の拡大率変更 */
+  color: #0000cd; /* ホバー時のテキストの色変更 */
+  transform: scale(1.5); /* ホバー時の拡大率変更 */
 }
-
