--- a/app/views/admin/souvenirs/show.html.erb
+++ b/app/views/admin/souvenirs/show.html.erb
@@ -5,7 +5,7 @@
       <div class="row mt-3">
         <div class="col-4">
            <% if @souvenir.rakuten_image_url.present? %>
-            <img src="<%= @souvenir.rakuten_image_url %>">
+            <img src="<%= @souvenir.rakuten_image_url %>", class="card-img-top width='30%' height='50%'">
           <% else %>
             <%= image_tag @souvenir.get_image.variant( resize: "250x250")  %>
           <% end %>
