--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,10 +1,10 @@
 <div class="container">
   <div class="row">
     <div class="col-3">
-      <%= render "layouts/prefecture", prefectures: @prefectures %>
-      <div class="row  m-5">
+      <div class="m-5 text-center">
         <%= link_to "ゲストログイン", user_guest_sign_in_path, class: "btn btn-outline-dark sign_in", method: :post %>
       </div>
+      <%= render "layouts/prefecture", prefectures: @prefectures %>
     </div>
 
     <div class="col-8 offset-1 pt-5">
@@ -35,7 +35,13 @@
               <div class="card-body">
                 <h4 class="card-title"><%= review.souvenir.souvenir_name %></h4>
                 <h6 class="card-subtitle m-2"><%= review.souvenir.prefecture.prefecture_name %></h6>
-                <p class="card-subtitle m-2"><%= review.user.nickname %> </p>
+                <p class="card-subtitle m-2">
+                  <% if review.user.is_deleted == false %>
+                    <%= review.user.nickname %>
+                  <% else review.user.is_deleted == true %>
+                    <span>退会済みユーザー</span>
+                  <% end %>
+                </p>
 	              <p class="card-subtitle m-2"><%= review.review.truncate(20) %> </p>
               </div>
 	          </div>
