--- a/app/views/public/souvenirs/_index.html.erb
+++ b/app/views/public/souvenirs/_index.html.erb
@@ -5,7 +5,7 @@
         <% if souvenir.rakuten_image_url.present? %>
           <img src="<%= souvenir.rakuten_image_url %>">
         <% else %>
-          <%= image_tag souvenir.get_image, class: "card-img-top width='30%' height='50'" %>
+          <%= image_tag souvenir.get_image, class: "card-img-top width='30%' height='50%'" %>
         <% end %>
         <div class="card-body">
           <h4 class="card-title"><%= souvenir.souvenir_name %></h4>
