--- a/app/views/public/souvenirs/index.html.erb
+++ b/app/views/public/souvenirs/index.html.erb
@@ -35,11 +35,13 @@
         <%= render "index", souvenirs: @souvenirs %>
 	    </div>
 
-	    <div class="text-right">
-      <%= link_to new_souvenir_path, class: "btn btn-outline-dark" do %>
-	      <i class="fa-solid fa-plus fa-2xl"></i>
+      <% if user_signed_in? %>
+	      <div class="text-right">
+          <%= link_to new_souvenir_path, class: "btn btn-outline-dark" do %>
+	          <i class="fa-solid fa-plus fa-2xl"></i>
+          <% end %>
+        </div>
       <% end %>
-      </div>
 
     </div>
   </div>
