--- a/app/views/admin/users/review.html.erb
+++ b/app/views/admin/users/review.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-10 mx-auto">
+    <div class="col-12 mx-auto">
       <h2 class="text-center m-3"><%= @user.nickname %> さんのレビュー一覧</h2>
       <div class="text-right">
          <%= link_to "戻る",  admin_user_path, class: "btn btn-outline-secondary" %>
@@ -9,6 +9,7 @@
       <table class="table table-border text-center m-3">
         <thead>
           <tr>
+            <th>投稿日時</th>
             <th>ミヤゲ名</th>
             <th>レビュー</th>
             <th></th>
@@ -18,8 +19,9 @@
         <% @user.reviews.each do |review| %>
         <tbody>
           <tr>
+            <td class="align-middle"><%= review.created_at.to_s(:datetime_jp) %></td>
             <td class="align-middle"><%= review.souvenir.souvenir_name %></td>
-            <td class="align-middle col-6"><%= review.review.truncate(20) %></td>
+            <td class="align-middle"><%= review.review.truncate(20) %></td>
             <!------------------------".truncate(20)" は、文字列を20文字だけ表示する------------------>
             <td class="align-middle"><%= link_to "詳細", admin_souvenir_review_path(review.souvenir, review), class: "btn btn-outline-info" %></td>
             <td class="align-middle"><%= link_to "削除", admin_souvenir_review_path(review.souvenir, review), "data-confirm" => "削除してもよろしいですか？", method: :delete, class: "btn btn-outline-danger" %></td>
