--- a/app/views/admin/users/want.html.erb
+++ b/app/views/admin/users/want.html.erb
@@ -9,6 +9,7 @@
       <table class="table table-border text-center m-3">
         <thead>
           <tr>
+            <th>ほしい！した日時</th>
             <th>ミヤゲ名</th>
             <th></th>
           </tr>
@@ -16,6 +17,7 @@
         <% @user.wants.each do |want| %>
         <tbody>
           <tr>
+            <td class="align-middle"><%= want.created_at.to_s(:datetime_jp) %></td>
             <td class="align-middle"><%= want.souvenir.souvenir_name %></td>
             <td class="align-middle"><%= link_to "削除", admin_souvenir_wants_path(want.souvenir), "data-confirm" => "削除してもよろしいですか？", method: :delete, class: "btn btn-outline-danger" %></td>
           </tr>
