--- a/app/views/public/homes/_search_review.html.erb
+++ b/app/views/public/homes/_search_review.html.erb
@@ -16,6 +16,10 @@
           <td class="col-2 text-center align-middle mb-2"><h6>在住県：&ensp;<%= review.user.residence_prefecture %></h6></td>
         </tr>
         <tr>
+          <th class="card-subtitle text-center">投稿日</th>
+          <td colspan="2", class="align-middle"><%= review.created_at.strftime('%Y年%m月%d日') %></td>
+        </tr>
+        <tr>
           <th class="card-subtitle text-center">貰った？贈った？</th>
           <td colspan="2", class="align-middle"><%= review.receive_send %></td>
         </tr>
