--- a/app/views/public/reviews/show.html.erb
+++ b/app/views/public/reviews/show.html.erb
@@ -23,8 +23,11 @@
        <table class="table table-border">
             <tbody>
               <tr>
+                <td class="text-center col-6">投稿日</td>
+                <td td class="col-6"><%= @review.created_at.strftime('%Y年%m月%d日') %></td>
+              </tr>
+              <tr>
                 <td class="text-center col-6">表示名（ユーザー名）</td>
-
                 <td class="col-6">
                   <% if @review.user.is_deleted == false %>
                     <%= @review.user.nickname %>
