--- a/app/views/public/users/want.html.erb
+++ b/app/views/public/users/want.html.erb
@@ -22,6 +22,7 @@
             <div class="card-body">
               <h4 class="card-title"><%= want.souvenir.souvenir_name %></h4>
               <p class="card-text"><%= want.souvenir.introduction %></p>
+              <p td class="card-subtitle text-center"><%= want.created_at.strftime('%Y年%m月%d日') %></p>
             </div>
           </div>
           <% end %>
